--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -8,12 +8,12 @@
     ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "index.js",
-             "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*"
-      }
+          "src": "/(.*)",
+          "dest": "./index.js",
+          "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+          "headers": {
+            "Access-Control-Allow-Origin": "*"
+          }
         }
-    ]
+      ]
 }
